# bisccits-snn-workshop

./: .gitignore  BISCCITS_SNN_Workshop.ipynb  BISCCITS_SNN_Workshop_participant.ipynb  CONVENTIONS.md  LICENSE  README.md  TODO_highlevel.md  pyproject.toml  requirements.txt
content/: 01_defining_snns.md  02_training_snns.md  03_evaluating_snns.md  04_bonus_fgi.md
dev/: build_notebook.py  run_script.py
scripts/: 01_defining_snns.py  02_training_snns.py  03_evaluating_snns.py  04_bonus_fgi.py
snn_workshop/: __init__.py  data.py  models.py  utils.py  viz.py
tikz_setup/: ch1_heaviside_surrogate.tex  ch1_lif_neuron.tex  ch1_lif_unrolled.tex  ch2_deep_snn.tex  ch2_input_tensor.tex  ch2_readout_loss.tex  ch2_space_time_grid.tex  ch2_three_architectures.tex  ch3_event_driven.tex  ch3_mac_vs_ac.tex  roadmap.tex  showcase.tex  style.tex
